--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@ body {
 
 .task-card {
   margin: 0 auto;
+  width: 375px;
+  height: 225px;
+  line-height: 40px;
 }
 
 .task-card:hover {
@@ -25,3 +28,38 @@ div#users-contain table { margin: 1em 0; border-collapse: collapse; width: 100%;
 div#users-contain table td, div#users-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
 .ui-dialog .ui-state-error { padding: .3em; }
 .validateTips { border: 1px solid transparent; padding: 0.3em; }
+
+/* Styles for cars based on due date */
+.redWarn {
+  background-color: lightcoral;
+  font-size: 24px;
+}
+
+.redWarn h2 {
+  background-color: red;
+  color: white;
+  line-height: 60px;
+  font-size: 36px;
+}
+
+.yellowWarn {
+  background-color: lightgoldenrodyellow;
+}
+
+.yellowWarn h2 {
+  background-color: goldenrod;
+  line-height: 60px;
+  font-size: 36px;
+}
+
+.pending {
+  background-color: white;
+  border: solid grey 1px;
+  font-size: 24px;
+}
+
+.pending h2 {
+  background-color: green;
+  line-height: 60px;
+  font-size: 36px;
+}
